# opengl-practice

./: .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  CommonValues.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  Window.cpp  Window.h  brick.png:Zone.Identifier  main.cpp
Shaders/: shader.frag  shader.vert
Textures/: dirt.png:Zone.Identifier  plain.png:Zone.Identifier
